@@ -1,3 +1,9 @@
+[b][color=orange]v4.36[/color], 14.11.2019[/b][list]
+[*]Changed some settings via install, which is now needed with the upcoming ElvUI update.
+[*]Removed DBM skin. You can still get my style via AddOnSkins.
+[*]Disable my Heal Prediction by default. Must figure out, why it dont work for some people.[/list]
+
+
 [b][color=orange]v4.35[/color], 12.11.2019[/b][list]
 [*]Removed the compatibility checks, i don't want to deal with it.[/list]
 
